--- a/views/partials/edit.html
+++ b/views/partials/edit.html
@@ -1,9 +1,8 @@
-<div class="modal fade" id="ediMoodal">
+<div class="modal fade" id="ediModal" ng-controller="TaskCtrl">
   <div class="modal-dialog">
     <div class="modal-content">
 
       <div class="panel panel-info title">
-
         <div class="panel-heading title">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h3 class="panel-title">Edit Task</h3>
