--- a/views/browse.html
+++ b/views/browse.html
@@ -45,7 +45,7 @@
         <!-- HEADER -->
         <div class="row">
           <div class="col-md-8">
-            <h3>{{selectedTask.title}}</h3>
+            <h3>{{ selectedTask.title }}</h3>
             <span>
               <img ng-src="{{selectedTask.gravatar}}" class="img-circle gravatar">
               Posted by {{selectedTask.name}} - 
@@ -70,6 +70,10 @@
                 </div>
               </div>
 
+              <div ng-show="isOpen(selectedTask) && !isTaskCreator(selectedTask) && !alreadyOffered">
+                <button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#offModal">Make an Offer</button>
+              </div>
+
             </div>
           </div>
         </div>
@@ -86,6 +90,35 @@
                 <div class="panel-body">
                     {{selectedTask.description}}
                 </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- OFFERS -->
+        <div class="row">
+          <div class="col-md-12">
+            <div class="panel panel-default">
+
+              <div class="panel-heading">
+                <h3 class="panel-title">Offers</h3>
+              </div>
+
+              <div class="panel-body">
+                <div class="title" ng-hide="offers && offers.length > 0">
+                  <span>No offers for this task yet!</span>
+                </div>
+
+                <div class="row" ng-repeat="offer in offers">
+                  <div class="col-md-10">
+                  <button ng-show="isOfferMaker(offer) && isOpen(selectedTask)" class="btn btn-danger btn-xs" ng-click="cancelOffer(offer.$id)">Cancel My Offer - ${{offer.total}}</button>
+
+                    <img ng-src="{{offer.gravatar}}" class="img-circle offer gravatar">
+                    <span>{{offer.name}}</span>
+                  </div>
+                </div><br>
+
+              </div>
+
             </div>
           </div>
         </div>
@@ -148,3 +181,5 @@
 </div>
 
 <div ng-include="'views/partials/edit.html'"></div>
+<div ng-include="'views/partials/offer.html'"></div>
+
