--- a/views/browse.html
+++ b/views/browse.html
@@ -74,6 +74,10 @@
                 <button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#offModal">Make an Offer</button>
               </div>
 
+              <div ng-show="isAssignee(selectedTask) && !isCompleted(selectedTask)">
+                <button class="btn btn-danger btn-sm" ng-click="completeTask(selectedTask.$id)">Complete</button>
+              </div>
+
             </div>
           </div>
         </div>
